feat: Update presentation content and add new flowchart images

--- a/presentations/assessment-state-machine/index.html
+++ b/presentations/assessment-state-machine/index.html
@@ -27,20 +27,6 @@
   </head>
 
   <body>
-    <div
-      id="work-in-progress"
-      style="
-        width: 100%;
-        text-align: center;
-        padding: 1rem 0;
-        background-color: #ffff00;
-        font-size: 2rem;
-        font-weight: bold;
-        position: absolute;
-      "
-      >WORK IN PROGRESS</div
-    >
-
     <div class="reveal">
       <div class="slides">
         <section>
@@ -55,28 +41,144 @@
         </section>
 
         <section>
-          <img data-src="./images/blank-white-card.jpg" />
+          <h2>Agenda</h2>
+
+          <br />
+
+          <div style="display: grid; grid-template-columns: 1fr 1fr">
+            <div style="align-self: center">
+              <ul>
+                <li>Problem Statement</li>
+                <li>State Machine Overview</li>
+                <li>Implementation Details</li>
+                <li>Benefits and Outcomes</li>
+                <li>Conclusion + Q&A</li>
+              </ul>
+            </div>
+
+            <div>
+              <img data-src="./images/common-player-state-flowchart.png" width="400" />
+            </div>
+          </div>
         </section>
 
         <section>
-          <pre>
-            <code class="language-html">
-&lt;a href="#"&gt;Link&lt;/a&gt;
-            </code>
-          </pre>
+          <section>
+            <h2>Problem Statement</h2>
+
+            <br />
+
+            <ul>
+              <li>Complex assessment lifecycle with multiple states.</li>
+              <li>Challenges in managing transitions and ensuring consistency.</li>
+              <li>Need for a structured approach to handle state changes.</li>
+            </ul>
+          </section>
         </section>
 
         <section>
-          <h2>Fragments</h2>
+          <section>
+            <h2>State Machine Overview</h2>
 
-          <br />
-          <br />
+            <br />
 
-          <ul>
-            <li class="fragment">First Fragment</li>
-            <li class="fragment">Second Fragment</li>
-            <li class="fragment">Third Fragment</li>
-          </ul>
+            <ul>
+              <li>Definition of a finite state machine (FSM).</li>
+              <li>States involved in the assessment process.</li>
+              <li>Transitions between states based on events.</li>
+            </ul>
+          </section>
+        </section>
+
+        <section>
+          <section>
+            <h2>Implementation Details</h2>
+
+            <br />
+
+            <ul>
+              <li>Designing the state machine structure.</li>
+              <li>Handling state transitions and events.</li>
+              <li>Integration with existing systems.</li>
+            </ul>
+          </section>
+        </section>
+
+        <section>
+          <section>
+            <h2>Benefits and Outcomes</h2>
+
+            <br />
+
+            <ul>
+              <li>Improved consistency in assessment state management.</li>
+              <li>Reduced errors and mismanagement of states.</li>
+              <li>Enhanced clarity and maintainability of the assessment process.</li>
+            </ul>
+          </section>
+        </section>
+
+        <section>
+          <section>
+            <h2>Conclusion + Q&A</h2>
+
+            <br />
+
+            <div style="display: grid; grid-template-columns: 1fr 1fr">
+              <div style="align-self: center">
+                <ul>
+                  <li>Problem Statement</li>
+                  <li>State Machine Overview</li>
+                  <li>Implementation Details</li>
+                  <li>Benefits and Outcomes</li>
+                  <li>Q&A</li>
+                </ul>
+              </div>
+
+              <div>
+                <img data-src="./images/hungry-full-state-machine.jpeg" width="300" />
+              </div>
+            </div>
+          </section>
+
+          <section>
+            <h2>Additional Resources on Finite State Machines</h2>
+
+            <br />
+            <br />
+
+            <ol>
+              <li>
+                <a href="https://refactoring.guru/design-patterns" target="_blank">Design Patterns</a>
+              </li>
+
+              <li>
+                <a
+                  href="https://ocw.mit.edu/courses/6-004-computation-structures-spring-2017/pages/c6/"
+                  target="_blank"
+                >
+                  MIT OpenCourseWare
+                </a>
+              </li>
+            </ol>
+          </section>
+
+          <section>
+            <h2>Powered By</h2>
+
+            <br />
+            <br />
+
+            <ol>
+              <li>A single, static webpage.</li>
+              <li>
+                <a href="https://revealjs.com/" target="_blank">reveal.js</a>
+              </li>
+              <li>
+                <a href="https://highlightjs.org/" target="_blank">highlight.js</a>
+              </li>
+            </ol>
+          </section>
         </section>
       </div>
     </div>
