Added 3 new projects, finished 2, started 1 other

--- a/projects/index.html
+++ b/projects/index.html
@@ -52,6 +52,24 @@
 
         <table id="link-table" data-columns="2">
           <tbody>
+            <tr>
+              <td>
+                <a href="/projects/lisp-interpreter">Lisp Interpreter</a>
+              </td>
+            </tr>
+
+            <tr>
+              <td>
+                <a href="/projects/infinite-canvas">Infinite Canvas</a>
+              </td>
+            </tr>
+
+            <tr>
+              <td>
+                <a href="/projects/n-gram-markov-chain">N-Gram Markov Chain</a>
+              </td>
+            </tr>
+
             <tr hidden>
               <td>
                 <a href="/projects/procedural-generation">Procedural Generation (Vibe Coded)</a>
