feat: add certification details for Generative AI course (commented out)

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -379,6 +379,17 @@
         </h2>
         <hr />
 
+        <!-- <p>
+          <b class="certification-and-course-title">Generative AI for Software Development Skill Certificate</b>
+          <br />
+          This certification from DeepLearning.AI provides a comprehensive framework for integrating Large Language
+          Models into the software development lifecycle to accelerate coding, testing, and system design. It emphasizes
+          the practical application of AI-powered pair programming to automate unit testing, refactor design patterns,
+          and architect scalable technical solutions.
+          <br />
+          <em class="certification-and-course-date">February 2026</em>
+        </p> -->
+
         <p>
           <b class="certification-and-course-title">Google UX Design Professional Certificate</b>
           <br />
