More polishing of loading fragments in the ASM tech talk

--- a/presentations/assessment-state-machine/index.html
+++ b/presentations/assessment-state-machine/index.html
@@ -707,7 +707,7 @@ new AgeValidationHandler()
 
             <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 30px; font-size: 0.85em; text-align: left">
               <div>
-                <h4 class="blue">Pattern Synergy</h4>
+                <h4 class="blue fragment">Pattern Synergy</h4>
 
                 <ul class="fragment">
                   <li>State manages flow</li>
@@ -718,7 +718,7 @@ new AgeValidationHandler()
               </div>
 
               <div>
-                <h4 class="blue">Development Benefits</h4>
+                <h4 class="blue fragment">Development Benefits</h4>
 
                 <ul class="fragment">
                   <li>Add features in hours</li>
